[project]
name = "google-oauth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "google-api-python-client>=2.170.0",
    "google-auth-oauthlib>=1.2.2",
    "jinja2>=3.1.6",
    "sqlmodel>=0.0.24",
    "uvicorn>=0.34.3",
]
